--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/CoverMonkey.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>CoverMonkey</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-  <title>CoverMonkey</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9059941732456860"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
